exports[`codeSnippet Generator embedFieldComponent 1`] = `
"<TextInputer
  value={name}
  registerValidator={undefined}
  onChange={update}
/>"
`;

exports[`codeSnippet Generator getValidateFnText: default 1`] = `"return null;"`;

exports[`codeSnippet Generator getValidateFnText: minLength, maxLength 1`] = `
"
if(value.length < 3){
  return \'CompanyName must be longer than 3 chars\';
}
else if(value.length > 20){
  return \'CompanyName must be smaller than 20 chars\';
}
else {
  return null;
}
"
`;

exports[`codeSnippet Generator getValidateFnText: number 1`] = `
"
if(isNaN(Number(value))){
  return \'Bid Price must be a valid Number\';
}
else {
  return null;
}
"
`;

exports[`codeSnippet Generator getValidateFnText: number, min, max 1`] = `
"
if(isNaN(Number(value))){
  return \'Bid Price must be a valid Number\';
}
else if(Number(value) < 1){
  return \'Bid Price must be larger than 1\';
}
else if(Number(value) > 15){
  return \'Bid Price must be smaller than 15\';
}
else {
  return null;
}
"
`;

exports[`codeSnippet Generator getValidateFnText: require, number 1`] = `
"
if(value == null || value === \'\'){
  return \'Bid Price cannot be empty\';
}
else if(isNaN(Number(value))){
  return \'Bid Price must be a valid Number\';
}
else {
  return null;
}
"
`;

exports[`codeSnippet Generator getValidateFnText: required 1`] = `
"
if(value == null || value === \'\'){
  return \'Name cannot be empty\';
}
else {
  return null;
}
"
`;

exports[`codeSnippet Generator getValidateFnText: required, minLength 1`] = `
"
if(value == null || value === \'\'){
  return \'Name cannot be empty\';
}
else if(value.length < 3){
  return \'Name must be longer than 3 chars\';
}
else {
  return null;
}
"
`;

exports[`codeSnippet Generator getValidateFnText: required, minLength, maxLength 1`] = `
"
if(value == null || value === \'\'){
  return \'Name cannot be empty\';
}
else if(value.length < 3){
  return \'Name must be longer than 3 chars\';
}
else if(value.length > 20){
  return \'Name must be smaller than 20 chars\';
}
else {
  return null;
}
"
`;

exports[`codeSnippet Generator importComponent 1`] = `"import TextInputer from \'./Section1/TextInputer\';"`;
